--- a/UiT.Blazor.Ordsky/Gutan.BlazorWasm.Ordsky.csproj
+++ b/UiT.Blazor.Ordsky/Gutan.BlazorWasm.Ordsky.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\SammensatteOrd.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
