--- a/UiT.Blazor.Ordsky/Gutan.BlazorWasm.Ordsky.csproj
+++ b/UiT.Blazor.Ordsky/Gutan.BlazorWasm.Ordsky.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Faker.Net" Version="2.0.154" />
+    <PackageReference Include="BlazorPro.Spinkit" Version="1.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="6.1.8" />
